workshop03/scratches/persistent-storage.yml
# creating a persistent volume claim resource
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
        - name: data-vol
          persistentVolumeClaim:
            claimName: mysql-pvc
      containers:
        - name: mysql-container
          image: mysql:8
          ports:
            - containerPort: 33060
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data-vol
