workshop03/scratches/ingress-fanout.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ing
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.146.190.193.75.sslip.io
      http:
        paths:
          # any request that comes in to path /, goes to the backend
          - path: /v1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-svc
                port:
                  number: 3000
          - path: /v2(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-v2-svc
                port:
                  number: 3000
